# NotAI

./: .buildinfo  .gitignore  README.md  build.bat  genindex.html  intro.html  objects.inv  plan.html  pyproject.toml  search.html  searchindex.js  upload.bat
_sources/: plan.md
_sources/maths/: intro.md  linear_algebra.ipynb  linear_algebra.md
maths/: intro.html  linear_algebra.html
notai/: _config.yml  _toc.yml  intro.md  plan.md  utils.py
notai/maths/: basics.ipynb  intro.md  linear_algebra.ipynb  solving_linear_equations.ipynb
