[tool.poetry]
name = "notai"
version = "0.1.0"
description = "Note about AI"
authors = ["Elia1996 <ribaldoneelia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter-book = "^1.0.2"
ghp-import = "^2.1.0"
numpy = "^2.0.0"
rich = "^13.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
